[package]
name = "repeated-assert"
version = "0.2.0"
authors = ["Daniel Faust <hessijames@gmail.com>"]
description = "Run assertions multiple times"
keywords = ["test", "testing", "integration-testing"]
homepage = "https://github.com/dfaust/repeated-assert"
repository = "https://github.com/dfaust/repeated-assert.git"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "dfaust/repeated-assert" }
appveyor = { repository = "dfaust/repeated-assert" }

[features]
async = ["futures", "tokio"]

[dependencies]
lazy_static = "1.4.0"
futures = { version = "0.3.1", optional = true }
tokio = { version = "0.2.10", features = ["macros", "time", "sync", "rt-threaded"], optional = true }
