[package]
name = "repeated-assert"
version = "0.3.0"
authors = ["Daniel Faust <hessijames@gmail.com>"]
description = "Run assertions multiple times"
keywords = ["test", "testing", "integration-testing"]
categories = ["development-tools::testing"]
homepage = "https://github.com/dfaust/repeated-assert"
repository = "https://github.com/dfaust/repeated-assert.git"
documentation = "https://docs.rs/repeated-assert"
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
async = ["futures", "tokio"]

[dependencies]
lazy_static = "1.4.0"
futures = { version = "0.3.1", optional = true }
tokio = { version = "1.0.0", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
